--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   font-family: 'Ubuntu', sans-serif;
   font-size: 16px;
+  box-sizing: border-box;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
